<resources>
    <string name="app_name">以为学习</string>

    <string name="server_error">服务器内部错误</string>
    <string name="net_work_error">网络不给力，请检查网络</string>

    <!--错误提示-->
    <string name="invalid_account">请输入正确的学号</string>
    <string name="invalid_pwd">密码长度不合法</string>
    <string name="pwd_mismatch">密码不一致</string>
    <string name="invalid_name">姓名不合法</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="reset_pwd_success">密码修改成功，请重新登录</string>

    <string name="login_btn_login">登录</string>
    <string name="login_title">学生登录</string>
    <string name="login_hint_account">请输入学号</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="login_invalid_account">学号不能为空</string>
    <string name="login_invalid_pwd">密码不能为空</string>
    <string name="login_menu_register">注册</string>
    <string name="login_btn_register">新用户注册</string>
    <string name="login_btn_reset_pwd">忘记密码？</string>

    <string name="register_title">学生注册</string>
    <string name="register_menu_login">登录</string>
    <string name="register_hint_account">请输入学号</string>
    <string name="register_hint_name">请输入姓名</string>
    <string name="register_hint_pwd">请设置6~16位密码</string>
    <string name="register_hint_confirm_pwd">请确认密码</string>
    <string name="register_btn_register">注册</string>
    <string name="register_changepwd_title">修改密码</string>
    <string name="register_forgetpwd_title">忘记密码</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="reset_pwd_input_old_pwd">请输入原密码</string>
    <string name="reset_pwd_input_new_pwd">请输入6~16位新密码</string>
    <string name="reset_pwd_confirm_new_pwd">确认新密码</string>
    <string name="reset_pwd_btn_confirm_update">确认修改</string>

    <string name="find_pwd_step_1_input_phone">请输入您的手机号</string>
    <string name="find_pwd_step_1_input_sms_code">请输入6位验证码</string>
    <string name="find_pwd_step_1_btn_send_code">获取验证码</string>
    <string name="find_pwd_step_1_btn_next">下一步</string>
    <string name="find_pwd_step_2_input_new_pwd">请输入6~16位新密码</string>
    <string name="find_pwd_step_2_confirm_new_pwd">确认新密码</string>
    <string name="find_pwd_step_2_btn_ok">确认</string>

    <string name="bind_phone_btn_ok">确认</string>

    <string name="menu_me">我的</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="me_center_setting">设置</string>
    <string name="my_word">我的词库</string>
    <string name="me_center_title">个人中心</string>
    <string name="me_info_title">个人信息</string>
    <string name="me_info_avatar">头像</string>
    <string name="me_info_account">学号</string>
    <string name="me_info_name">姓名</string>
    <string name="me_info_grade">年级</string>
    <string name="me_info_class">班级</string>
    <string name="me_setting_reset_pwd">修改密码</string>
    <string name="me_setting_title">设置</string>
    <string name="me_setting_log_out">退出登录</string>
    <string name="discuss_group_name">名称</string>
    <string name="discuss_group_grade">年级</string>
    <string name="discuss_group_class">班级</string>

    <string name="menu_group_member">组成员</string>

    <string name="discuss_msg_btn_start_discuss">开启讨论</string>

    <string name="discuss_questions_commit">提交</string>
    <string name="text_last_sentence">&lt;  上一句 </string>
    <string name="text_next_sentence">下一句  &gt;</string>
    <string name="text_last_paragraph">&lt;  上一段 </string>
    <string name="text_next_paragraph">下一段  &gt;</string>
    <string name="text_next_finish">结束阅读  &gt;</string>

</resources>
