<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context="com.yunding.dut.ui.account.FindPwdStep1Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/DUTEditText"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/find_pwd_step_1_input_phone"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_send_sms_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:background="@color/transparent"
                    android:text="@string/find_pwd_step_1_btn_send_code"
                    android:textColor="@color/color_primary"
                    android:textSize="16sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_sms_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:theme="@style/DUTEditText"
                    app:counterEnabled="true"
                    app:counterMaxLength="16">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_sms_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/find_pwd_step_1_input_sms_code"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/find_pwd_step_1_btn_next"
                android:theme="@style/DUTButton" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
