<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.yunding.dut.ui.account.ResetPwdActivity">
    <RelativeLayout
        android:layout_marginTop="98dp"
        android:layout_width="270dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="14sp"
            android:id="@+id/et_old_pwd"
            android:layout_marginLeft="7dp"
            android:layout_width="262dp"
            android:textColorHint="#cccccc"
            android:hint="@string/reset_pwd_input_old_pwd"
            android:textColor="@color/title"
            android:inputType="phone"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
        <View
            android:layout_below="@id/et_old_pwd"
            android:layout_width="262dp"
            android:background="@color/textColorShow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:layout_height="0.5dp"></View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="55dp"
        android:layout_width="270dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="14sp"
            android:id="@+id/et_new_pwd"
            android:layout_marginLeft="7dp"
            android:layout_width="262dp"
            android:textColorHint="#cccccc"
            android:hint="@string/reset_pwd_input_new_pwd"
            android:textColor="@color/gray"
            android:inputType="phone"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
        <View
            android:layout_below="@id/et_new_pwd"
            android:layout_width="262dp"
            android:background="@color/textColorShow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:layout_height="0.5dp"></View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="55dp"
        android:layout_width="270dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="14sp"
            android:id="@+id/et_confirm_new_pwd"
            android:layout_marginLeft="7dp"
            android:layout_width="262dp"
            android:textColorHint="#cccccc"
            android:hint="@string/reset_pwd_confirm_new_pwd"
            android:textColor="@color/textColorShow"
            android:inputType="phone"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
        <View
            android:layout_below="@id/et_confirm_new_pwd"
            android:layout_width="262dp"
            android:background="@color/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:layout_height="0.5dp"></View>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_reset_pwd"
        android:layout_width="262dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reset_pwd_btn_confirm_update"
        android:textColor="@color/bg_white"
        android:textSize="17sp"
        android:background="@drawable/btn_reg_bg" />



</LinearLayout>
